--- a/inventory/src/assets/base.css
+++ b/inventory/src/assets/base.css
@@ -8,6 +8,7 @@
   --vt-c-black-soft: #222222;
   --vt-c-black-mute: #282828;
 
+  --vt-c-blue: rgb(67 140 236);
   --vt-c-indigo: #2c3e50;
 
   --vt-c-divider-light-1: rgba(60, 60, 60, 0.29);
@@ -23,7 +24,7 @@
 
 /* semantic color variables for this project */
 :root {
-  --color-background: var(--vt-c-white);
+  --color-background: var(--vt-c-blue);
   --color-background-soft: var(--vt-c-white-soft);
   --color-background-mute: var(--vt-c-white-mute);
 
@@ -36,7 +37,7 @@
   --section-gap: 160px;
 }
 
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: light) {
   :root {
     --color-background: var(--vt-c-black);
     --color-background-soft: var(--vt-c-black-soft);
@@ -67,6 +68,8 @@ body {
     background-color 0.5s;
   line-height: 1.6;
   font-family:
+    "peridot-pe-variable", sans-serif,
+    Arial,
     Inter,
     -apple-system,
     BlinkMacSystemFont,
@@ -83,4 +86,18 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.dshadow {
+  box-shadow: 3px 4px 12px rgba(10, 10, 10, 0.25);
+}
+
+button {
+  cursor: pointer;
+  transition: all 0.3s ease-in;
+}
+
+button:hover {
+  box-shadow: 1px 2px 4px rgba(3, 3, 5, 0.50);
+  transition: all 0.3s ease;
 }
